prevent sub level overwrite on login